<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/button_show_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_desc_show_bio"
        app:layout_constraintBottom_toTopOf="@+id/button_search_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/button_search_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_desc_search_user"
        app:layout_constraintBottom_toTopOf="@+id/button_search_repo"
        app:layout_constraintEnd_toEndOf="@id/button_show_bio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_show_bio"
        app:layout_constraintTop_toBottomOf="@+id/button_show_bio" />

    <Button
        android:id="@+id/button_search_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_desc_search_repo"
        app:layout_constraintBottom_toTopOf="@+id/button_search_topic"
        app:layout_constraintEnd_toEndOf="@id/button_show_bio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_show_bio"
        app:layout_constraintTop_toBottomOf="@+id/button_search_user" />

    <Button
        android:id="@+id/button_search_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_desc_search_topic"
        app:layout_constraintBottom_toTopOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="@id/button_show_bio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_show_bio"
        app:layout_constraintTop_toBottomOf="@+id/button_search_repo" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_desc_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_show_bio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/button_show_bio"
        app:layout_constraintTop_toBottomOf="@+id/button_search_topic" />

</androidx.constraintlayout.widget.ConstraintLayout>